<resources>
    <string name="app_name">도윤짱 놀이터</string>
    <string name="video_count">영상수 : %1$</string>
    <string name="error_player">YouTube Player에서 에러가 발생했습니다.(%1$s)</string>

    <string name="media_url_mp3">http://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[http://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>

    <string name="list_load_error">One or more sample lists failed to load</string>

    <string name="title_activity_channels">키즈 채널</string>
    <string name="title_ipc_test">IPC Test</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_fragment_test">Fragment 테스트</string>
    <string name="title_view_stub_test">ViewStub 테스트</string>
    <string name="title_include_merge_test">Include&amp;Merge 테스트</string>
    <string name="title_design_pattern">Design Pattern</string>
    <string name="title_decorator_pattern">Decorator Pattern</string>
    <string name="title_strategy_pattern">Strategy Pattern</string>
    <string name="title_observer_pattern">Observer Pattern</string>
    <string name="title_singleton_pattern">Singleton Pattern</string>
    <string name="title_composite_pattern">Composite Pattern</string>
    <string name="title_template_method_pattern">Template Method Pattern</string>
    <string name="title_factory_method_pattern">Factory Method Pattern</string>
    <string name="title_abstract_factory_pattern">Abstract Factory Pattern</string>
    <string name="title_builder_pattern">Builder Pattern</string>
    <string name="title_adapter_pattern">Adapter Pattern</string>
    <string name="title_data_structure">Data Structure</string>
    <string name="title_hash_map">HashMap</string>
    <string name="title_kotlin">kotlin</string>
    <string name="title_rxjava">RxJava</string>
</resources>
