<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.hongka.hkcommonlibrarysample.designpattern.DesignPatternViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Decorator Pattern -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:layout_margin="5dp"
                    android:background="#e9e9e9">

                    <TextView
                        android:id="@+id/decorator_pattern_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_decorator_pattern"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:tag="@string/title_decorator_pattern"
                        android:onClick="@{(view) -> viewModel.onClick(view)}"/>

                </LinearLayout>

                <!-- Strategy Pattern -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:layout_margin="5dp"
                    android:background="#e9e9e9">

                    <TextView
                        android:id="@+id/strategy_pattern_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_strategy_pattern"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:tag="@string/title_strategy_pattern"
                        android:onClick="@{(view) -> viewModel.onClick(view)}"/>

                </LinearLayout>

                <!-- Observer Pattern -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:layout_margin="5dp"
                    android:background="#e9e9e9">

                    <TextView
                        android:id="@+id/observer_pattern_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_observer_pattern"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:tag="@string/title_observer_pattern"
                        android:onClick="@{(view) -> viewModel.onClick(view)}"/>

                </LinearLayout>

                <!-- Singleton Pattern -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:layout_margin="5dp"
                    android:background="#e9e9e9">

                    <TextView
                        android:id="@+id/singleton_pattern_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_singleton_pattern"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:tag="@string/title_singleton_pattern"
                        android:onClick="@{(view) -> viewModel.onClick(view)}"/>

                </LinearLayout>

                <!-- Composite Pattern -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:layout_margin="5dp"
                    android:background="#e9e9e9">

                    <TextView
                        android:id="@+id/composite_pattern_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_composite_pattern"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:tag="@string/title_composite_pattern"
                        android:onClick="@{(view) -> viewModel.onClick(view)}"/>

                </LinearLayout>

                <!-- Template Method Pattern -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:layout_margin="5dp"
                    android:background="#e9e9e9">

                    <TextView
                        android:id="@+id/template_method_pattern_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_template_method_pattern"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:tag="@string/title_template_method_pattern"
                        android:onClick="@{(view) -> viewModel.onClick(view)}"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>